--- a/src/app/src/App.css
+++ b/src/app/src/App.css
@@ -1,46 +1,51 @@
-.App {
-  text-align: center;
-  background-color: lightblue;
-
+body {
+  background-color: #7270d1;
 }
 
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: rgb(248, 249, 248);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  margin: 30px;
+  padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
-.add-todo-btn {
+
+.todo-form button {
+  background-color: #4CAF50;
   color: white;
-  background-color: green;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.error-message {
+  color: red;
+}
+.error-banner
+{
+  color: #4CAF50;
+  height: 100px;
+  width: 500px;
 }
